libnotificationmanager: Fix displaying item-based jobs

The logic was all there but we were not emitting when the text would
change, which would then never reflect on the UI.

BUG: 457203